--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "classnames": "^2.3.1",
+    "daisyui": "^2.24.0",
     "framer-motion": "^7.2.1",
     "next": "12.2.5",
     "react": "18.2.0",
